--- a/styles/globals.css
+++ b/styles/globals.css
@@ -233,11 +233,6 @@ a {
   position: relative;
 }
 
-.goto-home{
-  font-size: 14px;
-  text-decoration: underline;
-}
-
 
 @media screen and (max-width:1200px) {
   .action-container{
@@ -266,4 +261,53 @@ a {
     display: grid;
     grid-area: 2 / 1 / 3 / 3;
   }
+}
+
+.form-container{
+  height: 80vh;
+  display: grid;
+  place-content: center;
+  text-align: center;
+}
+
+.form-container form{
+  display: grid;
+  grid-auto-flow: row;
+  grid-gap: 10px;
+  width: 280px;
+}
+
+.form-container input{
+  display: block;
+  width: 100%;
+  padding: 8px 12px;
+  border: none;
+  outline: none;
+  border-radius: 15px;
+  margin-bottom: 10px;
+}
+
+.form-container label{
+  text-align: left;
+}
+
+.form-container .submit-btn{
+  background-color: #3885d4;
+  cursor: pointer;
+  color: #fff;
+  /* margin-top: 5px; */
+}
+
+.goto-home{
+  font-size: 14px;
+  text-decoration: underline;
+}
+
+.signup{
+  display: block;
+  margin: 5px 0 20px;
+  background-color: #4fa64f;
+  border-radius: 15px;
+  padding: 10px 0;
+  font-size: 14px;
 }
