--- a/styles/globals.css
+++ b/styles/globals.css
@@ -66,12 +66,12 @@ h1,h2,h3{
 }
 
 h1{
-  font-size: 36px;
+  font-size: 32px;
   line-height: 44px;
 }
 
 h2{
-  font-size: 32px;
+  font-size: 30px;
   line-height: 42px;
 }
 
@@ -310,4 +310,13 @@ a {
   border-radius: 15px;
   padding: 10px 0;
   font-size: 14px;
+}
+
+.active{
+  background-color: #303557;
+  border-radius: 10px;
+}
+
+.active-mob{
+  border-bottom: 3px solid #ec4f71;
 }
